--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-preset-env": "^1.1.7",
+    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "standard": "^8.6.0",
+    "tap-spec": "^4.1.1",
     "tape": "^4.6.3",
     "tape-catch": "^1.0.6"
   },
   "scripts": {
     "lint": "standard './*.js' './src/**/*.js'",
     "fix": "standard --fix './*.js' './src/**/*.js'",
-    "test": "tape -r babel-register test/**/*.test.js",
+    "test": "tape -r babel-register test/**/*.test.js | tap-spec",
     "build": "babel src -d lib",
     "watch": "babel src -d lib --watch",
     "start": "npm run fix && npm run test && npm run build"
