--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "url": "https://github.com/mimshwright/keyIsDown.js"
   },
   "bugs": {
-    "url" : "https://github.com/mimshwright/keyIsDown.js/issues"
+    "url": "https://github.com/mimshwright/keyIsDown.js/issues"
   },
   "author": "Mims H. Wright",
   "license": "MIT",
-
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "standard": "^8.6.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3",
-    "tape-catch": "^1.0.6"
+    "tape-catch": "^1.0.6",
+    "webpack": "^1.14.0"
   },
   "dependencies": {
     "keycode": "^2.1.8"
@@ -30,8 +30,9 @@
     "lint": "standard './*.js' './src/**/*.js'",
     "fix": "standard --fix './*.js' './src/**/*.js'",
     "test": "tape -r babel-register test/**/*.test.js | tap-spec",
-    "build": "babel src -d lib",
-    "watch": "babel src -d lib --watch",
+    "build": "webpack --config webpack.config.babel.js",
+    "watch": "webpack --watch --config webpack.config.babel.js",
+    "example": "open example/index.html",
     "start": "npm run fix && npm run test && npm run build"
   }
 }
