Preparing for npm

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pressed",
   "version": "1.0.0",
   "description": "A simple library for tracking which keyboard keys are currently being pressed.",
+  "keywords": "game, keyboard, keycode, pressed, keydown, keyup, polling, input, loop, es6",
   "main": "dist/pressed.js",
   "repository": {
     "type": "git",
