--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
   "author": "Mims H. Wright",
   "license": "MIT",
   "devDependencies": {
+    "ava": "^0.17.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "standard": "^8.6.0",
     "tap-spec": "^4.1.1",
-    "tape": "^4.6.3",
-    "tape-catch": "^1.0.6",
     "webpack": "^1.14.0"
   },
   "dependencies": {
@@ -30,12 +29,28 @@
   "scripts": {
     "lint": "standard './*.js' './src/**/*.js'",
     "fix": "standard --fix './*.js' './src/**/*.js'",
-    "test": "tape -r babel-register test/**/*.test.js | tap-spec",
+    "test": "ava -v",
     "build": "babel src/pressed.js -o lib/pressed.js",
     "prepublish": "npm run lint && npm run test && npm run build",
     "build-example": "webpack --config webpack.config.babel.js",
     "watch": "webpack --watch --config webpack.config.babel.js",
     "example": "open example/index.html",
     "start": "npm run fix && npm run test && npm run watch"
+  },
+  "ava": {
+    "files": [
+      "test/**/*.js"
+    ],
+    "source": [
+      "src/**/*.{js,jsx}"
+    ],
+    "concurrency": 20,
+    "failFast": true,
+    "tap": false,
+    "powerAssert": false,
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
   }
 }
